--- a/iftar/templates/iftar/donor_form.html
+++ b/iftar/templates/iftar/donor_form.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block menu %}
-    <button class="btn btn-outline-danger" type="button" onclick="window.location.href = '/';">{{mosqueInfo.donor_menu_button}}</button>
-    <button class="btn btn-sm btn-outline-primary" type="button" onclick="window.location.href = '/list';">{{mosqueInfo.schedule_menu_button}}
+    <button class="btn btn-secondary" type="button" onclick="window.location.href = '/';">{{mosqueInfo.donor_menu_button}}</button>
+    <button class="btn btn-sm btn-dark" type="button" onclick="window.location.href = '/list';">{{mosqueInfo.schedule_menu_button}}
     </button>
 
 {% endblock %}
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
-                    <td><input type="submit" class="btn btn-danger"></td>
+                    <td><input type="submit" class="btn btn-primary"></td>
                 </tr>
             </table>
         </form>
