--- a/iftar/templates/iftar/index.html
+++ b/iftar/templates/iftar/index.html
@@ -6,8 +6,8 @@
 {% endblock %}
 
 {% block menu %}
-    <button class="btn btn-outline-danger" type="button" onclick="window.location.href = '/list';">{{mosqueInfo.schedule_menu_button}}</button>
-    <button class="btn btn-sm btn-outline-primary" type="button" onclick="window.location.href = '/';">{{mosqueInfo.donor_menu_button}}
+    <button class="btn btn-secondary" type="button" onclick="window.location.href = '/list';">{{mosqueInfo.schedule_menu_button}}</button>
+    <button class="btn btn-sm btn-dark" type="button" onclick="window.location.href = '/';">{{mosqueInfo.donor_menu_button}}
     </button>
 {% endblock %}
 
