--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,10 +19,10 @@
     </form>
 </nav>
 
-<div class="jumbotron p-3 mb-2 bg-danger text-light">
+<div class="jumbotron p-3 mb-2 bg-secondary text-light">
     <h1><a href="{{ mosqueInfo.url }}" class="text-light">{{mosqueInfo.name}} </a></h1>
 </div>
-<div class="p-3 mb-2 bg-info text-white">
+<div class="p-3 mb-2 bg-light">
     {% block content %}
     {% endblock %}
 
